self_hosted/k8s/memos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: production
  labels:
    app: memos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      containers:
      - name: memos
        image: neosmemo/memos:stable
        ports:
        - containerPort: 5230
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        volumeMounts:
        - name: memos
          mountPath: /var/opt/memos
      volumes:
      - name: memos
        persistentVolumeClaim:
          claimName: memos-pvc
