self_hosted/k8s/memos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos-svc
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: memos
  ports:
    - port: 80
      targetPort: 5230
